--- a/Denoising/MeshDenoising.vcxproj.filters
+++ b/Denoising/MeshDenoising.vcxproj.filters
@@ -150,6 +150,12 @@
     <ClCompile Include="Slice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GetHexagonalSubarea.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Clipper\clipper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithms\BilateralMeshDenoising.h">
@@ -216,6 +222,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ScanPathPlan.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GetHexagonalSubarea.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
