--- a/Denoising/MeshDenoising.vcxproj.filters
+++ b/Denoising/MeshDenoising.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="GetHexagonHatches.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GetIntervalHatches.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithms\BilateralMeshDenoising.h">
@@ -231,6 +234,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GetHexagonHatches.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GetIntervalHatches.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
