--- a/Denoising/MeshDenoising.vcxproj.filters
+++ b/Denoising/MeshDenoising.vcxproj.filters
@@ -239,6 +239,9 @@
     <ClInclude Include="GetIntervalHatches.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyTimer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="mainwindow.ui">
